# Tbv-cli-v2

./: .gitignore  Dockerfile  Hello.java  README.MD  asc.wasm  ascHttpApi.js  ascHttpWasm.js  conversion_dockerfile.js  executeGoWasm.js  executeWasm.js  go.js  go.wasm  hello-world.html  httpApi.js  httpWasm.js  index.html  index.js  jest.config.js  output.wasm  package-lock.json  package.json  pom.xml  rdfHandler.js  rust.mjs  rust.wasm  rustHttpWasm.js  simpleApi.js  testWasm.js  testWasm.test.js  wasm.js  wasm_exec.js
execution-files/: executeAssemblyScriptWasm.js  executeRustWasm.js  executeWasm.js
go-http/: goHttpApi.js  goHttpWasm.js
java-proj/: pom.xml
rust-http/: rustHttpApi.js  rustHttpWasm.js
testing-files/: Dockerfile  conversion.py  main.go  main.ts  output.wat  simple.go  test.go
testing-files/as-sdk-test/: Dockerfile  asconfig.json  index.ts  output.wasm  package-lock.json  package.json
testing-files/go-sdk-test/: Dockerfile  go.mod  go.sum  main.go  output.wasm
testing-files/rust/: Cargo.toml  Dockerfile  hello.wat  output.wasm
testing-files/rust-sdk-test/: Cargo.toml  output.wasm
testing-files/rust-sdk-test/src/: lib.rs  main.rs
testing-files/rust/src/: lib.rs
tests/: integration.test.ts
