[package]
name = "tbv-rust-sdk-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
TBV-Rust-SDK-2 = "0.1.7"  # Make sure this matches the version you published

[dependencies.getrandom]
version = "0.2"
features = ["js"]