[package]
name = "getting_started_with_rust_wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://grafbase.com/blog"
repository = "https://github.com/grafbase/getting-started-with-rust-wasm"

# ¹
[lib]
crate-type = ["cdylib"]

[dependencies]
# ²
wasm-bindgen = "0.2.92"
# ³
console_error_panic_hook = "0.1"

# ⁴
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1